--- a/style.css
+++ b/style.css
@@ -579,6 +579,7 @@ i[ title="logo-footer"] {
     .snd-blk a {
         color: white;
         text-decoration: none;
+        font-size: 1rem;
     }
     .secondary-footer {
         padding-top: 20px;
@@ -600,6 +601,10 @@ i[ title="logo-footer"] {
 
     .trd-sec-2 a {
         display: block;
+    }
+
+    .quickLinkItem {
+        padding: 0;
     }
 
 }
