--- a/style.css
+++ b/style.css
@@ -368,7 +368,10 @@ i[ title="logo-footer"] {
 
 .snd-blk {
     padding: 10px;
-    font-size: 1.3rem;
+    padding-top: 20px;
+    font-size: 1.1rem;
+    display: flex;
+    gap: 1rem;
 } 
 
 .secondary-footer {
@@ -381,8 +384,6 @@ i[ title="logo-footer"] {
 .quickLinkItem {
     text-decoration: none;
     color: white;
-    padding-top:30px;
-    padding-left: 20px;
     text-align: center;
 }
 
@@ -395,7 +396,7 @@ i[ title="logo-footer"] {
 }
 
 .trd-sec-2 {
-    padding: 0 20px;
+    padding-top: 10px;
     display: flex;
     flex-wrap: wrap;
 }
@@ -403,7 +404,7 @@ i[ title="logo-footer"] {
 .trd-sec-2 a {
     padding-left: 20px;
     text-decoration: none;
-    font-size: 1.2rem;
+    font-size: 1rem;
     color: white;
 }
 
@@ -548,10 +549,6 @@ i[ title="logo-footer"] {
         font-size: 1.4rem;
     }
 
-    .search-panel {
-        top: 58px;
-    }
-
     .container-box {
         gap: 5rem;
     }
@@ -615,6 +612,17 @@ i[ title="logo-footer"] {
 
     .content > h2 {
         width: 200px;
+    }
+
+}
+
+@media (max-width:800px) {
+    .snd-blk {
+        font-size: 1rem;
+        display: grid;
+        grid-template-columns: auto auto auto;
+        grid-template-rows: auto auto auto;
+        grid-row-gap: 1rem;
     }
 
 }
