--- a/style.css
+++ b/style.css
@@ -239,15 +239,61 @@ main,
 
 
 .cont-2 {
-    width: 100vw;
+    width: 100%;
     position: absolute;
     top: max(100vh,766px);
     background-color: black;
 }
 
-.material {
+.team-sec {
     width: 100%;
-    height: 100vh;
+    font-family: arial;
+}
+
+.team-sec1 {
+    width: 100%;
+    background-color: #fefefe;
+    padding: 40px 0px;
+}
+
+.team {
+    text-align: center;
+    padding: 20px;
+    font-size: 2rem;
+    color: #3f3f3f;
+}
+
+.line {
+    width: 100px;
+    height: 7px;
+    border-bottom: 3px solid #3f3f3f;
+    margin: 0 auto;
+}
+
+.team-sec2 {
+    background-color: #f75506;
+    justify-content: center;
+    padding: 40px;
+}
+
+.team-ctn {
+    justify-content: space-evenly;
+    gap: 2rem;
+    flex-wrap: wrap;
+}
+
+.team-card {
+    width: 300px;
+    height: 400px;
+    background-color: #f9f7f7;
+    border-radius: 10px;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.mem {
+    width: 70px;
+    height: 70px;
 }
 
 .srch {
@@ -303,7 +349,8 @@ main,
 }
 
 .srch-logo {
-    width: 110px;
+    width: calc(100% - 50px);
+    max-width: 500px;
     height: 110px;
     background-image: url('image.png');
     background-size: contain;
@@ -777,6 +824,7 @@ i[ title="logo-footer"] {
     }
 
     .search-bar {
+        max-width: 100%;
         width: 100vw;
         border-radius: 0px;
     }
