--- a/style.css
+++ b/style.css
@@ -248,6 +248,7 @@ main,
 .team-sec {
     width: 100%;
     font-family: arial;
+    overflow: hidden;
 }
 
 .team-sec1 {
@@ -273,7 +274,7 @@ main,
 .team-sec2 {
     background-color: #f75506;
     justify-content: center;
-    padding: 40px;
+    padding: 80px 30px;
 }
 
 .team-ctn {
@@ -287,13 +288,65 @@ main,
     height: 400px;
     background-color: #f9f7f7;
     border-radius: 10px;
+    padding: 30px;
+    text-align: center;
     justify-content: center;
     flex-direction: column;
 }
 
 .mem {
-    width: 70px;
-    height: 70px;
+    width: 120px;
+    height: 135px;
+    margin-bottom: 20px;
+    border-radius: 20px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}
+
+.logo1 {
+    background-image: url('kishan.png');
+}
+
+.logo2 {
+    background-image: url('sahil.png');
+}
+
+.logo3 {
+    background-image: url('kartikey.png');
+}
+
+.logo4 {
+    background-image: url('earthdeep.png');
+}
+
+.mem-about > h3,
+.mem-about > h5 {
+    color: #2d2d2d;
+}
+
+.mem-about > h5 {
+    padding-bottom: 10px;
+    font-size: 0.9rem;
+    margin-top: 5px;
+}
+
+.mem-about > p {
+    padding: 0 10px;
+    padding-bottom: 20px;
+    font-weight: 300;
+    color: #454545;
+    font-size: calibri;
+}
+
+.mem-smp {
+    justify-content: center;
+    gap: 0.5rem;
+}
+
+.mem-smp > i {
+    font-size: 20px;
+    color: #f75506;
 }
 
 .srch {
