--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ main,
 
 .bg {
     position: absolute;
-    background-image: url("image6.png");
+    background-image: url("anime style backgrou2.png");
     background-size: cover;
     background-position: center;
     transform: translateZ(-30px);
